Bug 96299 - [vulkan] 64 regressions due to mesa d5f2f32
Summary: [vulkan] 64 regressions due to mesa d5f2f32
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: Jason Ekstrand
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 96253
  Show dependency treegraph
 
Reported: 2016-05-31 23:49 UTC by Mark Janes
Modified: 2016-06-01 23:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-05-31 23:49:47 UTC
Many tests fail due to image verification, matching the following test name pattern:

deqp-vk.binding_model.shader_access.*_cmd_buf.uniform_buffer_dynamic.*.*.offset_view_*_dynamic_*

EG: 
/tmp/build_root/m64/opt/deqp/modules/vulkan/deqp-vk --deqp-case=dEQP-VK.binding_model.shader_access.primary_cmd_buf.uniform_buffer_dynamic.geometry.multiple_descriptors.offset_view_zero_dynamic_zero 
dEQP Core git-7e3803ae7688f91ac275c2191862fcdc4df6bc72 (0x7e3803ae) starting..
  target implementation = 'Default'

Test case 'dEQP-VK.binding_model.shader_access.primary_cmd_buf.uniform_buffer_dynamic.geometry.multiple_descriptors.offset_view_zero_dynamic_zero'..
Test case duration in microseconds = 37907 us
  Fail (Image verification failed)
Comment 1 Jason Ekstrand 2016-06-01 23:06:54 UTC
Fixed by the following commit:

commit 1205999c229b8e67af39fb9875bd87bc0a1404eb
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Wed Jun 1 15:01:04 2016 -0700

    i965/fs: Copy the offset when lowering logical pull constant sends
    
    This fixes 64 Vulkan CTS tests per gen
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=96299
    Reviewed-by: Francisco Jerez <currojerez@riseup.net>
    Cc: "12.0" <mesa-stable@lists.freedesktop.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.